giropops-project/ingress/nginx-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: ingress
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000
      name: http-apps
    - port: 18080
      nodePort: 32000
      name: http-mgmt
  selector:
    app: nginx-ingress-lb
