giropops-project/ingress/apps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: apps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: elb-k8s.us-east-1.elb.amazonaws.com # This is fake address
    http:
      paths:
      - pathType: Prefix
        path: "/app1"
        backend:
          service:
            name: app1-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/app2"
        backend:
          service:
            name: app2-svc
            port:
              number: 80
